Fix CI workflow: use npm install instead of npm ci, add package-lock.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Set execute permissions for macOS binary
         if: matrix.os == 'macos-latest'
