--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ desktop.ini
 # User settings
 settings.json
 
-# Local SlipStream client binaries (downloaded)
+# Local Stream Gate client binaries (downloaded)
 binaries/
 
 # Environment
