build: integrate react ui build into release process

--- a/package.json
+++ b/package.json
@@ -6,30 +6,32 @@
   "scripts": {
     "start": "cd ui && npm run build && cd .. && electron .",
     "dev": "cd ui && npm run dev",
+    "build:ui": "cd ui && npm install && npm run build",
+    "postinstall": "cd ui && npm install",
     "generate-icons": "node scripts/generate-icons.js && npx electron-icon-builder --input=./assets/icon.png --output=./assets --flatten",
     "download:binaries": "node scripts/download-binaries.js",
     "clean:binaries": "node -e \"const fs=require('fs'); fs.rmSync('binaries',{recursive:true,force:true}); console.log('✅ Removed ./binaries');\"",
     "verify:binaries": "node scripts/verify-binaries.js --platform all",
     "prebuild:mac": "node scripts/verify-binaries.js --platform mac",
-    "build:mac": "electron-builder --mac --publish never",
+    "build:mac": "npm run build:ui && electron-builder --mac --publish never",
     "prebuild:mac:arm64": "node scripts/verify-binaries.js --platform mac --arch arm64",
-    "build:mac:arm64": "electron-builder --mac --arm64 --publish never",
+    "build:mac:arm64": "npm run build:ui && electron-builder --mac --arm64 --publish never",
     "prebuild:mac:x64": "node scripts/verify-binaries.js --platform mac --arch x64",
-    "build:mac:x64": "electron-builder --mac --x64 --publish never",
+    "build:mac:x64": "npm run build:ui && electron-builder --mac --x64 --publish never",
     "prebuild:win": "node scripts/verify-binaries.js --platform win",
-    "build:win": "electron-builder --win --publish never",
+    "build:win": "npm run build:ui && electron-builder --win --publish never",
     "prebuild:win:x64": "node scripts/verify-binaries.js --platform win",
-    "build:win:x64": "electron-builder --win --x64 --publish never",
+    "build:win:x64": "npm run build:ui && electron-builder --win --x64 --publish never",
     "prebuild:win:ia32": "node scripts/verify-binaries.js --platform win",
-    "build:win:ia32": "electron-builder --win --ia32 --publish never",
+    "build:win:ia32": "npm run build:ui && electron-builder --win --ia32 --publish never",
     "prebuild:linux": "node scripts/verify-binaries.js --platform linux",
-    "build:linux": "electron-builder --linux --publish never",
+    "build:linux": "npm run build:ui && electron-builder --linux --publish never",
     "prebuild:linux:x64": "node scripts/verify-binaries.js --platform linux",
-    "build:linux:x64": "electron-builder --linux --x64 --publish never",
+    "build:linux:x64": "npm run build:ui && electron-builder --linux --x64 --publish never",
     "prebuild:linux:arm64": "node scripts/verify-binaries.js --platform linux",
-    "build:linux:arm64": "electron-builder --linux --arm64 --publish never",
+    "build:linux:arm64": "npm run build:ui && electron-builder --linux --arm64 --publish never",
     "prebuild:all": "node scripts/verify-binaries.js --platform all",
-    "build:all": "electron-builder --mac --win --linux --publish never"
+    "build:all": "npm run build:ui && electron-builder --mac --win --linux --publish never"
   },
   "keywords": [
     "vpn",
