refactor: the whole application ui and logic

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "stream-gate",
   "version": "0.0.1",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
-  "main": "main.js",
+  "main": "src/start-main/main.js",
   "scripts": {
-    "start": "cd ui && npm run build && cd .. && electron .",
-    "dev": "cd ui && npm run dev",
-    "build:ui": "cd ui && npm install && npm run build",
-    "postinstall": "cd ui && npm install",
+    "start": "cd src/start-renderer && npm run build && cd ../.. && electron .",
+    "dev": "cd src/start-renderer && npm run dev",
+    "build:ui": "cd src/start-renderer && npm install && npm run build",
+    "postinstall": "cd src/start-renderer && npm install",
     "generate-icons": "node scripts/generate-icons.js && npx electron-icon-builder --input=./assets/icon.png --output=./assets --flatten",
     "download:binaries": "node scripts/download-binaries.js",
     "clean:binaries": "node -e \"const fs=require('fs'); fs.rmSync('binaries',{recursive:true,force:true}); console.log('✅ Removed ./binaries');\"",
