--- a/package.json
+++ b/package.json
@@ -2,37 +2,36 @@
   "name": "stream-gate",
   "version": "0.0.1",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
-  "main": "dist/main/main.js",
+  "main": "dist/main/main.mjs",
   "scripts": {
-    "build:main": "tsc -p src/start-main/tsconfig.json",
-    "start": "npm run build:main && cd src/start-renderer && npm run build && cd ../.. && electron .",
-    "dev": "cd src/start-renderer && npm run dev",
-    "build:ui": "cd src/start-renderer && npm install && npm run build",
-    "postinstall": "cd src/start-renderer && npm install",
-    "generate-icons": "node scripts/generate-icons.js && npx electron-icon-builder --input=./assets/icon.png --output=./assets --flatten",
-    "download:binaries": "node scripts/download-binaries.js",
-    "clean:binaries": "node -e \"const fs=require('fs'); fs.rmSync('binaries',{recursive:true,force:true}); console.log('✅ Removed ./binaries');\"",
-    "verify:binaries": "node scripts/verify-binaries.js --platform all",
-    "prebuild:mac": "node scripts/verify-binaries.js --platform mac",
-    "build:mac": "npm run build:ui && electron-builder --mac --publish never",
-    "prebuild:mac:arm64": "node scripts/verify-binaries.js --platform mac --arch arm64",
-    "build:mac:arm64": "npm run build:ui && electron-builder --mac --arm64 --publish never",
-    "prebuild:mac:x64": "node scripts/verify-binaries.js --platform mac --arch x64",
-    "build:mac:x64": "npm run build:ui && electron-builder --mac --x64 --publish never",
-    "prebuild:win": "node scripts/verify-binaries.js --platform win",
-    "build:win": "npm run build:ui && electron-builder --win --publish never",
-    "prebuild:win:x64": "node scripts/verify-binaries.js --platform win",
-    "build:win:x64": "npm run build:ui && electron-builder --win --x64 --publish never",
-    "prebuild:win:ia32": "node scripts/verify-binaries.js --platform win",
-    "build:win:ia32": "npm run build:ui && electron-builder --win --ia32 --publish never",
-    "prebuild:linux": "node scripts/verify-binaries.js --platform linux",
-    "build:linux": "npm run build:ui && electron-builder --linux --publish never",
-    "prebuild:linux:x64": "node scripts/verify-binaries.js --platform linux",
-    "build:linux:x64": "npm run build:ui && electron-builder --linux --x64 --publish never",
-    "prebuild:linux:arm64": "node scripts/verify-binaries.js --platform linux",
-    "build:linux:arm64": "npm run build:ui && electron-builder --linux --arm64 --publish never",
-    "prebuild:all": "node scripts/verify-binaries.js --platform all",
-    "build:all": "npm run build:ui && electron-builder --mac --win --linux --publish never"
+    "build:main": "bun build src/start-main/main.ts --outfile dist/main/main.mjs --target=node --external electron",
+    "start": "NODE_ENV=production bun run build:main && cd src/start-renderer && bun run build && cd ../.. && NODE_ENV=production electron .",
+    "dev": "cd src/start-renderer && bun run dev",
+    "build:ui": "cd src/start-renderer && bun install && bun run build",
+    "postinstall": "cd src/start-renderer && bun install",
+    "generate-icons": "bun run scripts/generate-icons.js && npx electron-icon-builder --input=./assets/icon.png --output=./assets --flatten",
+    "download:binaries": "bun run scripts/download-binaries.js",
+    "clean:binaries": "bun run scripts/clean-binaries.js",
+    "verify:binaries": "bun run scripts/verify-binaries.js --platform all",
+    "prebuild:mac": "bun run scripts/verify-binaries.js --platform mac",
+    "build:mac": "bun run build:ui && electron-builder --mac --publish never",
+    "prebuild:mac:arm64": "bun run scripts/verify-binaries.js --platform mac --arch arm64",
+    "build:mac:arm64": "bun run build:ui && electron-builder --mac --arm64 --publish never",
+    "prebuild:mac:x64": "bun run scripts/verify-binaries.js --platform mac --arch x64",
+    "build:mac:x64": "bun run build:ui && electron-builder --mac --x64 --publish never",
+    "prebuild:win": "bun run scripts/verify-binaries.js --platform win",
+    "build:win": "bun run build:ui && electron-builder --win --publish never",
+    "prebuild:win:x64": "bun run scripts/verify-binaries.js --platform win",
+    "prebuild:win:ia32": "bun run scripts/verify-binaries.js --platform win",
+    "build:win:ia32": "bun run build:ui && electron-builder --win --ia32 --publish never",
+    "prebuild:linux": "bun run scripts/verify-binaries.js --platform linux",
+    "build:linux": "bun run build:ui && electron-builder --linux --publish never",
+    "prebuild:linux:x64": "bun run scripts/verify-binaries.js --platform linux",
+    "build:linux:x64": "bun run build:ui && electron-builder --linux --x64 --publish never",
+    "prebuild:linux:arm64": "bun run scripts/verify-binaries.js --platform linux",
+    "build:linux:arm64": "bun run build:ui && electron-builder --linux --arm64 --publish never",
+    "prebuild:all": "bun run scripts/verify-binaries.js --platform all",
+    "build:all": "bun run build:ui && electron-builder --mac --win --linux --publish never"
   },
   "keywords": [
     "vpn",
