--- a/src/start-renderer/package.json
+++ b/src/start-renderer/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.24",
+    "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
