--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build:main": "bun build src/start-main/main.ts --outfile dist/main/main.mjs --target=node --external electron",
     "start": "NODE_ENV=production bun run build:main && cd src/start-renderer && bun run build && cd ../.. && NODE_ENV=production electron .",
-    "dev": "cd src/start-renderer && bun run dev",
+    "dev": "bun run build:main && cd src/start-renderer && bun run dev",
+    "dev:electron": "bun run build:main && NODE_ENV=development electron .",
+    "dev:all": "bun run build:main && concurrently -k \"cd src/start-renderer && bun run dev\" \"wait-on http://localhost:5173 && NODE_ENV=development electron .\"",
     "build:ui": "cd src/start-renderer && bun install && bun run build",
     "postinstall": "cd src/start-renderer && bun install",
     "generate-icons": "bun run scripts/generate-icons.js && npx electron-icon-builder --input=./assets/icon.png --output=./assets --flatten",
@@ -54,11 +56,13 @@
     "@types/http-proxy": "1.17.17",
     "@types/ip": "1.1.3",
     "@types/node": "25.2.0",
+    "concurrently": "9.2.1",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "electron-icon-builder": "2.0.1",
     "sharp": "0.34.5",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "wait-on": "9.0.3"
   },
   "dependencies": {
     "base32-encode": "2.0.0",
