--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           set -euo pipefail
-          REPO="mirzaaghazadeh/slipstream-rust-deploy"
+          REPO="Fox-Fig/slipstream-rust-plus-deploy"
           mkdir -p binaries
           # Ensure we always use fresh binaries for releases
           rm -f binaries/stream-client-*
@@ -90,7 +90,7 @@ jobs:
           echo "Downloading $ASSET from $REPO..."
           # Note: Using '|| true' to prevent failure if the external repo or asset doesn't exist yet
           # For production, you should ensure this repository exists or remove this step if binaries are pre-bundled
-          gh release download --repo "$REPO" --pattern "$ASSET" --dir binaries || echo "Warning: Could not download binary from $REPO"
+          gh release download --repo "$REPO" --pattern "$ASSET" --dir binaries
           
           if [ -f "binaries/$ASSET" ]; then
             mv "binaries/$ASSET" "binaries/$OUT"
@@ -128,12 +128,12 @@ jobs:
         run: |
           if [ "${{ matrix.platform }}" == "mac" ]; then
             if [ "${{ matrix.arch }}" == "arm64" ]; then
-              chmod +x binaries/stream-gate-client-mac-arm64 || true
+              chmod +x binaries/stream-client-mac-arm64
             else
-              chmod +x binaries/stream-gate-client-mac-intel || true
+              chmod +x binaries/stream-client-mac-intel
             fi
           elif [ "${{ matrix.platform }}" == "linux" ]; then
-            chmod +x binaries/stream-gate-client-linux || true
+            chmod +x binaries/stream-client-linux
           fi
 
       - name: Build application
