--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stream-gate",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Stream Gate - VPN Client with HTTP Proxy",
   "main": "dist/main/main.mjs",
   "scripts": {
@@ -79,14 +79,19 @@
       "output": "dist"
     },
     "files": [
-      "**/*",
-      "!dist/**/*",
-      "!*.md",
-      "!.gitignore",
+      "dist/main/**/*",
+      "src/start-renderer/dist/**/*",
+      "assets/**/*",
+      "index.html",
+      "package.json",
+      "!**/node_modules",
+      "!src/start-main",
+      "!src/start-renderer/src",
       "!**/*.md",
+      "!**/*.ts",
+      "!**/*.tsx",
       "!**/.gitignore",
-      "!settings.json",
-      "!**/settings.json"
+      "!settings.json"
     ],
     "mac": {
       "extraResources": [
